# ClaudeCode-MCP-Service

./: .gitignore  README.md  config.example.toml  mcp_server.py  pyproject.toml  requirements.txt
core/: context.py  errors.py  registry.py  response.py
providers/hello/: plugin.py  pyproject.toml
providers/wechat/: plugin.py  pyproject.toml
providers/wechat/tools/: article_fetch.py  mp_list.py  mp_search.py
src/mcp_server/: main.py
src/mcp_server/core/: context.py  cookies.py  errors.py  http_client.py  registry.py  response.py
src/providers/hello/: pyproject.toml
src/providers/hello/src/hello/: plugin.py
src/providers/hello/src/hello/tools/: say.py
src/providers/wechat/: pyproject.toml
src/providers/wechat/src/wechat/: plugin.py
src/providers/wechat/src/wechat/tools/: article_fetch.py  mp_list.py  mp_search.py
