[project]
name = "claudecode-mcp-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "requests",
  "pydantic",
  "tomli; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.uv.workspace]
members = [
  "providers/hello",
  "providers/wechat",
]
